--- a/Project_A/Config/DefaultEngine.ini
+++ b/Project_A/Config/DefaultEngine.ini
@@ -113,8 +113,10 @@ SoundCueCookQualityIndex=-1
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Desktop
-DefaultGraphicsPerformance=EGraphicsPreset::Maximum
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Project_A")
@@ -122,3 +124,18 @@ DefaultGraphicsPerformance=EGraphicsPreset::Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonPlayerController",NewClassName="Project_APlayerController")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Project_AGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Project_ACharacter")
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=72B5F56C4DD99F51EDBE999B1DB797D4
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
