--- a/Project_A/Config/DefaultEngine.ini
+++ b/Project_A/Config/DefaultEngine.ini
@@ -124,11 +124,13 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonPlayerController",NewClassName="Project_APlayerController")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Project_AGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Project_ACharacter")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=72B5F56C4DD99F51EDBE999B1DB797D4
+SecurityToken=D81C0E8548C449E3A099DE8C31621A03
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
