--- a/.gitignore
+++ b/.gitignore
@@ -74,10 +74,12 @@ Project_A/Plugins/**/Intermediate/*
 # Cache files for the editor to use
 Project_A/DerivedDataCache/*
 
+Project_A/Content/*
 !Project_A/Content/Project_A_Root
 !Project_A/Content/ThirdPerson
+!Project_A/Content/__ExternalObjects__
+!Project_A/Content/__ExternalActors__
 
-Project_A/Content/*
 Project_A/Source/Project_A/Variant_Combat
 Project_A/Source/Project_A/Variant_Platforming
 Project_A/Source/Project_A/Variant_SideScrolling
