--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ Project_A/Source/Project_A/Variant_Combat
 Project_A/Source/Project_A/Variant_Platforming
 Project_A/Source/Project_A/Variant_SideScrolling
 
+Project_A/PrjPackages
+Project_A/TestReports
